--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-    <meta http-equiv="refresh" content="0; url=https://">
+    <meta http-equiv="refresh" content="0; url=https://MarsRover.github.io/visual/index.html">
  </head>
 </html> 
  
