--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./visual/css/style.css" />
     <link rel="stylesheet" href="./visual/lib/themes/jquery.ui.all.css" />
 
-  <!--  <script type="text/javascript" src="./visual/lib/raphael-min.js"></script>  -->
+    <script type="text/javascript" src="./visual/lib/raphael-min.js"></script>  
     <script type="text/javascript" src="./visual/lib/es5-shim.min.js"></script>
     <script type="text/javascript" src="./visual/lib/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="./visual/lib/state-machine.min.js"></script>
