--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./visual/lib/themes/jquery.ui.all.css" />
 
     <script type="text/javascript" src="./visual/lib/raphael-min.js"></script>  
-    <!-- <script type="text/javascript" src="./visual/lib/es5-shim.min.js"></script>  -->
+    <!-- <script type="text/javascript" src="./visual/lib/es5-shim.min.js"></script> 
     <script type="text/javascript" src="./visual/lib/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="./visual/lib/state-machine.min.js"></script>
     <script type="text/javascript" src="./visual/lib/async.min.js"></script>
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="./visual/js/view.js"></script>
     <script type="text/javascript" src="./visual/js/controller.js"></script>
     <script type="text/javascript" src="./visual/js/panel.js"></script>
-    <script type="text/javascript" src="./visual/js/main.js"></script>
+    <script type="text/javascript" src="./visual/js/main.js"></script>     -->
   </head>
   <body>
     <div id="draw_area"></div>
