--- a/index.html
+++ b/index.html
@@ -8,22 +8,23 @@
     <link rel="stylesheet" href="./visual/lib/themes/jquery.ui.all.css" />
 
     <script type="text/javascript" src="./visual/lib/raphael-min.js"></script>  
-    <script type="text/javascript" src="./visual/lib/es5-shim.min.js"></script> 
+
+  <!--     <script type="text/javascript" src="./visual/lib/es5-shim.min.js"></script> 
     <script type="text/javascript" src="./visual/lib/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="./visual/lib/state-machine.min.js"></script>
     <script type="text/javascript" src="./visual/lib/async.min.js"></script>
 
-  <!--   <script type="text/javascript" src="./visual/lib/ui/jquery.ui.core.min.js"></script>
+    <script type="text/javascript" src="./visual/lib/ui/jquery.ui.core.min.js"></script>
     <script type="text/javascript" src="./visual/lib/ui/jquery.ui.widget.min.js"></script>
     <script type="text/javascript" src="./visual/lib/ui/jquery.ui.mouse.min.js"></script>
     <script type="text/javascript" src="./visual/lib/ui/jquery.ui.draggable.min.js"></script>
     <script type="text/javascript" src="./visual/lib/ui/jquery.ui.accordion.min.js"></script>
     <script type="text/javascript" src="./visual/lib/ui/jquery.ui.slider.min.js"></script>
 
-    <script type="text/javascript" src="./visual/lib/pathfinding-browser.min.js"></script>
+    <script type="text/javascript" src="./visual/lib/pathfinding-browser.min.js"></script>  -->
 
-    <script type="text/javascript" src="./visual/js/view.js"></script>
-    <script type="text/javascript" src="./visual/js/controller.js"></script>
+   <script type="text/javascript" src="./visual/js/view.js"></script> 
+  <!--   <script type="text/javascript" src="./visual/js/controller.js"></script>
     <script type="text/javascript" src="./visual/js/panel.js"></script>
     <script type="text/javascript" src="./visual/js/main.js"></script>     -->
   </head>
