--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
     <script type="text/javascript" src="./visual/lib/pathfinding-browser.min.js"></script>  
 
-   <script type="text/javascript" src="./visual/js/view.js"></script> 
-  <!--   <script type="text/javascript" src="./visual/js/controller.js"></script>
+    <script type="text/javascript" src="./visual/js/view.js"></script> 
+    <script type="text/javascript" src="./visual/js/controller.js"></script>
     <script type="text/javascript" src="./visual/js/panel.js"></script>
-    <script type="text/javascript" src="./visual/js/main.js"></script>     -->
+    <script type="text/javascript" src="./visual/js/main.js"></script>     
   </head>
   <body>
     <div id="draw_area"></div>
