--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
       Click Start Search in the lower-right corner to start the animation.
     </div>
 
+    <div id = "GridSize" class = "panel"> 
+     <header><h2 class = "header_title">Select grid size</h2></header>
+        <div id="grid_size" class="options">
+            <input type="radio" name="grid" value="Small" checked />
+            <label class="option_label">Small</label> <br>
+            <input type="radio" name="grid" value="Medium"/>
+            <label class="option_label">Medium</label> <br>
+            <input type="radio" name="grid" value="Large"/>
+            <label class="option_label">Large</label> <br>
+         </div>
+
+
     <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
 
