--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <input type="radio" name="grid" value="Large"/>
             <label class="option_label">Large</label> <br>
          </div>
-
+    </div>
 
     <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
