--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id = "GridSize" class = "panel"> 
      <header><h2 class = "header_title">Select grid size</h2></header>
-        <div id="grid_size" class="options">
+        <div id="grid_size" class="sub_options">
             <input type="radio" name="grid" value="Small" checked />
             <label class="option_label">Small</label> <br>
             <input type="radio" name="grid" value="Medium"/>
