--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
     <script>
       function set_grid(){
-          Controller.buildNewGrid();
+          window.clear();
+          Controller.onleavenone();
       }
     </script>
 
