--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <input type="radio" name="grid" value="Large"/>
             <label class="option_label">Large</label> <br>
          </div>
-     <button id="button_size" class = "control_button" onclick = "set_grid()">Set grid size</button>
+     <button id="button_size" onclick = "set_grid()">Set grid size</button>
     </div>
 
     <script>
