Added a new state set to the statemachine

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             <input type="radio" name="grid" value="Large"/>
             <label class="option_label">Large</label> <br>
          </div>
-     <button id="button_size" onclick = "set_grid()">Set grid size</button>
+     <button id="button4" class="control_button">Set grid size</button>
     </div>
 
-    <script>
+  <!--  <script>
       function set_grid(){
           window.clear();
           Controller.onleavenone();
       }
-    </script>
+    </script>   -->
 
     <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
