--- a/index.html
+++ b/index.html
@@ -132,6 +132,21 @@
           </div>
         </div>
 
+        <h3 id="depthfirst_header"><a href="#">Depth-First-Search</a></h3>
+        <div id="depthfirst_section" class="finder_section">
+          <header class="option_header">
+            <h3>Options</h3>
+          </header>
+          <div class="optional sub_options">
+            <input type="checkbox" class="allow_diagonal" checked>
+            <label class="option_label">Allow Diagonal</label> <br>
+            <input type="checkbox" class="bi-directional">
+            <label class="option_label">Bi-directional</label> <br>
+            <input type="checkbox" class="dont_cross_corners">
+            <label class="option_label">Don't Cross Corners</label> <br>
+          </div>
+        </div>
+
         <h3 id="bestfirst_header"><a href="#">Best-First-Search</a></h3>
         <div id="bestfirst_section" class="finder_section">
           <header class="option_header">
