--- a/index.html
+++ b/index.html
@@ -43,13 +43,7 @@
       Click Start Search in the lower-right corner to start the animation.
     </div>
 
-    <div id="example" class ="panel">
-	  <header>Welcome to the race between rovers</header>
-	</div>
-	
 	<div id="WelcomeMsg" class = "show">Welcome to the race between rovers <br> Enjoy the race</div>
-
-	<div id="WinMsg"></div>
 	
     <div id="algorithm_panel" class="panel right_panel">
       <header><h2 class="header_title">Select Algorithm</h2></header>
@@ -249,7 +243,11 @@
       <button id="button3" class="control_button">Clear Walls</button>
     </div>
 
-
+    <div id="WinMsg">
+	<button id="button4" class="control_button">Start Search</button>
+	</div>
+	
+	
     <div id="stats"></div>
 
     <footer>
